# Rust-Sqlite-Wrapper

./: .gitignore  Cargo.toml  README.md  main.py  model.py  pyproject.toml  rust_sqlite_wrapper.pyi  sqlite_rust_wrapper.pyi  sqlite_wrapper.py  tests.py
src/: database.rs
