[package]
name = "rust_sqlite_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_sqlite_wrapper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
rusqlite = { version = "0.33.0", features = ["bundled"] }
